Fixed misalignment on search bar

--- a/app/assets/stylesheets/bootstrap_tweaks.css.scss
+++ b/app/assets/stylesheets/bootstrap_tweaks.css.scss
@@ -47,6 +47,10 @@ p:last-child {
   margin: 2px 0;
 }
 
+.input-group .btn {
+  margin: 0;
+}
+
 .dropdown-menu > li > span {
   clear: both;
   color: #333333;
